# -AI-Automate-Insurance-Claims-using-Agentic-Architecture

./: .env  README.md  pyproject.toml
knowledge/: user_preference.txt
src/ai_automated_claims/: crew.py  main.py
src/ai_automated_claims/config/: agents.yaml  tasks.yaml
