[project]
name = "ai_automated_claims"
version = "0.1.0"
description = "ai-automated-claims using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ai_automated_claims = "ai_automated_claims.main:run"
run_crew = "ai_automated_claims.main:run"
train = "ai_automated_claims.main:train"
replay = "ai_automated_claims.main:replay"
test = "ai_automated_claims.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
